--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 FROM mcr.microsoft.com/devcontainers/base:debian
 #
-RUN apt-get update && apt-get install -y nodejs npm node-react ts-node node-webassemblyjs node-url-loader node-typescript 
+RUN apt-get update && apt-get install -y nodejs npm node-react ts-node node-webassemblyjs node-url-loader node-typescript
+RUN npm install gatsby
